--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "14.1.4",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
