--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo & npx next-video sync -w",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
