--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "component": "generate-react component"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "framer-motion": "^11.1.7",
     "next": "14.1.4",
     "react": "^18",
