--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "component": "generate-react component"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "classnames": "^2.5.1",
     "framer-motion": "^11.2.10",
     "next": "14.1.4",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-query": "^3.39.3",
+    "react-redux": "^9.1.2",
     "sass": "^1.77.5",
     "swiper": "^11.1.4"
   },
