--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.7",
+    "busboy": "^1.6.0",
     "classnames": "^2.5.1",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.2.10",
+    "googleapis": "^144.0.0",
     "next": "14.1.4",
+    "next-connect": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
@@ -23,10 +28,12 @@
     "swiper": "^11.1.4"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "generate-react-cli": "^8.4.6",
+    "multer": "1.4.5-lts.1",
     "typescript": "^5.4.5"
   }
 }
