--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "component": "generate-react component"
   },
   "dependencies": {
+    "@react-email/components": "0.0.32",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.7",
     "busboy": "^1.6.0",
@@ -19,8 +20,10 @@
     "googleapis": "^144.0.0",
     "next": "14.1.4",
     "next-connect": "^1.0.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-emails": "^1.2.3",
     "react-hook-form": "^7.52.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
@@ -28,8 +31,10 @@
     "swiper": "^11.1.4"
   },
   "devDependencies": {
+    "@react-email/render": "^1.0.4",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20.14.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "generate-react-cli": "^8.4.6",
